--- a/Receita-Next-01/package.json
+++ b/Receita-Next-01/package.json
@@ -1,15 +1,9 @@
 {
-  "name": "receita-next-01",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "next": "^14.0.2"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
